aggregating more data

--- a/fireforce_V2.ipynb
+++ b/fireforce_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "[21926 rows x 19 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "[21926 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "3173"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
        "Name: Name, Length: 1636, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
        "Name: ALARM_DATE, Length: 21926, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1849,7 +1849,7 @@
        "       2009., 2011., 2013., 2015., 2017., 2018., 2019., 2021., 2022.])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
        "array([2013, 2014, 2015, 2016, 2017, 2018, 2019])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,8 +1879,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Might not be worth using because only 2 years match with the pm2.5 dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The third dataset can be found here: https://www.kaggle.com/datasets/avkashchauhan/california-wildfire-dataset-from-2000-2021/data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2142,7 @@
        "       2020, 2012, 2006, 2003, 2016, 2017, 2019, 2001, 2015, 2000])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,10 +2153,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['latitude', 'longitude', 'acq_date', 'satellite', 'instrument', 'frp',\n",
+       "       'type', 'bright_t31', 'confidence', 'year', 'month'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "third_fire.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6352\n",
+      "221183\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(third_fire[\"acq_date\"].unique()))\n",
+    "print(len(third_fire[\"acq_date\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        6/18/2020 12:00:00 AM\n",
+       "1         6/1/2020 12:00:00 AM\n",
+       "2        8/10/2020 12:00:00 AM\n",
+       "3        3/31/2020 12:00:00 AM\n",
+       "4        4/14/2020 12:00:00 AM\n",
+       "                 ...          \n",
+       "21921    3/16/2022 12:00:00 AM\n",
+       "21922    8/14/2022 12:00:00 AM\n",
+       "21923     9/9/2022 12:00:00 AM\n",
+       "21924    7/31/2022 12:00:00 AM\n",
+       "21925    7/25/2022 12:00:00 AM\n",
+       "Name: ALARM_DATE, Length: 21926, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_fire[\"ALARM_DATE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        6/23/2020 12:00:00 AM\n",
+       "1         6/4/2020 12:00:00 AM\n",
+       "2        8/11/2020 12:00:00 AM\n",
+       "3         4/1/2020 12:00:00 AM\n",
+       "4        4/19/2020 12:00:00 AM\n",
+       "                 ...          \n",
+       "21921    3/17/2022 12:00:00 AM\n",
+       "21922    8/14/2022 12:00:00 AM\n",
+       "21923    9/10/2022 12:00:00 AM\n",
+       "21924     8/3/2022 12:00:00 AM\n",
+       "21925    7/25/2022 12:00:00 AM\n",
+       "Name: CONT_DATE, Length: 21926, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_fire[\"CONT_DATE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/otaira/.pyenv/versions/3.12.2/envs/emberalert/lib/python3.12/site-packages/pyproj/crs/crs.py:141: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
+      "  in_crs_string = _prepare_from_proj_string(in_crs_string)\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_66721/1225653894.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  merged_fire_geo['ALARM_DATE'] = pd.to_datetime(merged_fire_geo['ALARM_DATE'], errors='coerce')\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_66721/1225653894.py:13: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  merged_fire_geo['CONT_DATE'] = pd.to_datetime(merged_fire_geo['CONT_DATE'], errors='coerce')\n",
+      "/Users/otaira/.pyenv/versions/3.12.2/envs/emberalert/lib/python3.12/site-packages/geopandas/array.py:365: UserWarning: Geometry is in a geographic CRS. Results from 'sjoin_nearest' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert merged_fire to a GeoDataFrame\n",
+    "merged_fire_geo = gpd.GeoDataFrame(merged_fire, geometry='geometry')\n",
+    "\n",
+    "# Convert third_fire to a GeoDataFrame\n",
+    "third_fire_geo = gpd.GeoDataFrame(third_fire, geometry=gpd.points_from_xy(third_fire['longitude'], third_fire['latitude']))\n",
+    "\n",
+    "# Set the coordinate reference system (CRS) for both GeoDataFrames\n",
+    "merged_fire_geo.crs = {'init': 'epsg:4326'}\n",
+    "third_fire_geo.crs = {'init': 'epsg:4326'}\n",
+    "\n",
+    "# Convert 'ALARM_DATE', 'CONT_DATE', and 'acq_date' to datetime if not already\n",
+    "merged_fire_geo['ALARM_DATE'] = pd.to_datetime(merged_fire_geo['ALARM_DATE'], errors='coerce')\n",
+    "merged_fire_geo['CONT_DATE'] = pd.to_datetime(merged_fire_geo['CONT_DATE'], errors='coerce')\n",
+    "third_fire_geo['acq_date'] = pd.to_datetime(third_fire_geo['acq_date'])\n",
+    "\n",
+    "# Perform the spatial join with a distance tolerance\n",
+    "distance_tolerance = 0.1  # Adjust the distance tolerance as needed (in degrees)\n",
+    "merged_df = gpd.sjoin_nearest(merged_fire_geo, third_fire_geo, how='inner',max_distance=distance_tolerance, distance_col='distance')\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged_df = merged_df[(merged_df['distance'] <= distance_tolerance) &\n",
+    "                      (merged_df['acq_date'] >= merged_df['ALARM_DATE']) &\n",
+    "                      (merged_df['acq_date'] <= merged_df['CONT_DATE'])]\n",
+    "# Print the merged DataFrame\n",
+    "print(merged_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AcresBurned', 'Active', 'AdminUnit', 'AirTankers', 'ArchiveYear',\n",
+       "       'CalFireIncident', 'CanonicalUrl', 'ConditionStatement',\n",
+       "       'ControlStatement', 'Counties', 'CountyIds', 'CrewsInvolved', 'Dozers',\n",
+       "       'Engines', 'Extinguished', 'Fatalities', 'Featured', 'Final',\n",
+       "       'FuelType', 'Helicopters', 'Injuries', 'Latitude', 'Location',\n",
+       "       'Longitude', 'MajorIncident', 'Name', 'PercentContained',\n",
+       "       'PersonnelInvolved', 'Public', 'SearchDescription', 'SearchKeywords',\n",
+       "       'Started', 'Status', 'StructuresDamaged', 'StructuresDestroyed',\n",
+       "       'StructuresEvacuated', 'StructuresThreatened', 'UniqueId', 'Updated',\n",
+       "       'WaterTenders'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "second_fire.columns"
+   ]
   }
  ],
  "metadata": {
