--- a/fireforce_V2.ipynb
+++ b/fireforce_V2.ipynb
@@ -4982,6 +4982,375 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>YEAR_</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>AGENCY</th>\n",
+       "      <th>UNIT_ID</th>\n",
+       "      <th>FIRE_NAME</th>\n",
+       "      <th>INC_NUM</th>\n",
+       "      <th>ALARM_DATE</th>\n",
+       "      <th>CONT_DATE</th>\n",
+       "      <th>CAUSE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>acq_date</th>\n",
+       "      <th>satellite</th>\n",
+       "      <th>instrument</th>\n",
+       "      <th>frp</th>\n",
+       "      <th>type</th>\n",
+       "      <th>bright_t31</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13056</th>\n",
+       "      <td>34595</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CCO</td>\n",
+       "      <td>KRN</td>\n",
+       "      <td>LAVAL</td>\n",
+       "      <td>01216604</td>\n",
+       "      <td>2012-06-03</td>\n",
+       "      <td>2012-06-03</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-06-03</td>\n",
+       "      <td>Terra</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>320.8</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13063</th>\n",
+       "      <td>34602</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CCO</td>\n",
+       "      <td>KRN</td>\n",
+       "      <td>SAND</td>\n",
+       "      <td>01222306</td>\n",
+       "      <td>2012-07-17</td>\n",
+       "      <td>2012-07-17</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-07-17</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>226.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>322.3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13065</th>\n",
+       "      <td>34604</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CCO</td>\n",
+       "      <td>KRN</td>\n",
+       "      <td>SOUTH</td>\n",
+       "      <td>01223744</td>\n",
+       "      <td>2012-07-29</td>\n",
+       "      <td>2012-08-01</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-07-29</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>292.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>322.5</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17235</th>\n",
+       "      <td>38813</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CDF</td>\n",
+       "      <td>AEU</td>\n",
+       "      <td>GROOVY</td>\n",
+       "      <td>00027965</td>\n",
+       "      <td>2011-12-01</td>\n",
+       "      <td>2011-12-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2011-12-01</td>\n",
+       "      <td>Terra</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>278.8</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.002170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17239</th>\n",
+       "      <td>38817</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>ANF</td>\n",
+       "      <td>MINT</td>\n",
+       "      <td>00004967</td>\n",
+       "      <td>2011-09-17</td>\n",
+       "      <td>2011-09-19</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2011-09-17</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>313.9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21567</th>\n",
+       "      <td>43190</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>KNF</td>\n",
+       "      <td>HELLO</td>\n",
+       "      <td>00005659</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-08-12</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>40.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>306.8</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21567</th>\n",
+       "      <td>43190</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>KNF</td>\n",
+       "      <td>HELLO</td>\n",
+       "      <td>00005659</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-08-14</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>291.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21567</th>\n",
+       "      <td>43190</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>KNF</td>\n",
+       "      <td>HELLO</td>\n",
+       "      <td>00005659</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-08-12</td>\n",
+       "      <td>Terra</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>294.5</td>\n",
+       "      <td>97</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21567</th>\n",
+       "      <td>43190</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>KNF</td>\n",
+       "      <td>HELLO</td>\n",
+       "      <td>00005659</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-08-12</td>\n",
+       "      <td>Aqua</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>294.7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21567</th>\n",
+       "      <td>43190</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USF</td>\n",
+       "      <td>KNF</td>\n",
+       "      <td>HELLO</td>\n",
+       "      <td>00005659</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-08-11</td>\n",
+       "      <td>Terra</td>\n",
+       "      <td>MODIS</td>\n",
+       "      <td>62.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>302.1</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15312 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       OBJECTID   YEAR_ STATE AGENCY UNIT_ID FIRE_NAME   INC_NUM ALARM_DATE  \\\n",
+       "13056     34595  2012.0    CA    CCO     KRN     LAVAL  01216604 2012-06-03   \n",
+       "13063     34602  2012.0    CA    CCO     KRN      SAND  01222306 2012-07-17   \n",
+       "13065     34604  2012.0    CA    CCO     KRN     SOUTH  01223744 2012-07-29   \n",
+       "17235     38813  2011.0    CA    CDF     AEU    GROOVY  00027965 2011-12-01   \n",
+       "17239     38817  2011.0    CA    USF     ANF      MINT  00004967 2011-09-17   \n",
+       "...         ...     ...   ...    ...     ...       ...       ...        ...   \n",
+       "21567     43190  2012.0    CA    USF     KNF     HELLO  00005659 2012-08-05   \n",
+       "21567     43190  2012.0    CA    USF     KNF     HELLO  00005659 2012-08-05   \n",
+       "21567     43190  2012.0    CA    USF     KNF     HELLO  00005659 2012-08-05   \n",
+       "21567     43190  2012.0    CA    USF     KNF     HELLO  00005659 2012-08-05   \n",
+       "21567     43190  2012.0    CA    USF     KNF     HELLO  00005659 2012-08-05   \n",
+       "\n",
+       "       CONT_DATE  CAUSE  ...   acq_date  satellite  instrument    frp type  \\\n",
+       "13056 2012-06-03   14.0  ... 2012-06-03      Terra       MODIS   23.1    0   \n",
+       "13063 2012-07-17   14.0  ... 2012-07-17       Aqua       MODIS  226.5    0   \n",
+       "13065 2012-08-01   14.0  ... 2012-07-29       Aqua       MODIS  292.7    0   \n",
+       "17235 2011-12-01    5.0  ... 2011-12-01      Terra       MODIS   11.2    0   \n",
+       "17239 2011-09-19    9.0  ... 2011-09-17       Aqua       MODIS  249.0    0   \n",
+       "...          ...    ...  ...        ...        ...         ...    ...  ...   \n",
+       "21567 2012-10-01    1.0  ... 2012-08-12       Aqua       MODIS   40.6    0   \n",
+       "21567 2012-10-01    1.0  ... 2012-08-14       Aqua       MODIS    6.5    0   \n",
+       "21567 2012-10-01    1.0  ... 2012-08-12      Terra       MODIS   16.5    0   \n",
+       "21567 2012-10-01    1.0  ... 2012-08-12       Aqua       MODIS   23.1    0   \n",
+       "21567 2012-10-01    1.0  ... 2012-08-11      Terra       MODIS   62.2    0   \n",
+       "\n",
+       "      bright_t31 confidence  year  month  distance  \n",
+       "13056      320.8         76  2012      6  0.000216  \n",
+       "13063      322.3        100  2012      7  0.000000  \n",
+       "13065      322.5        100  2012      7  0.000000  \n",
+       "17235      278.8         53  2011     12  0.002170  \n",
+       "17239      313.9        100  2011      9  0.000000  \n",
+       "...          ...        ...   ...    ...       ...  \n",
+       "21567      306.8         88  2012      8  0.000000  \n",
+       "21567      291.0         56  2012      8  0.000000  \n",
+       "21567      294.5         97  2012      8  0.000000  \n",
+       "21567      294.7        100  2012      8  0.000000  \n",
+       "21567      302.1         93  2012      8  0.000000  \n",
+       "\n",
+       "[15312 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
